1.5.0.dev
-----------------

- make sure test commands are searched first in the virtualenv 

- rename README.txt to README.rst to make bitbucket happier

- re-fix issue2 - add command_whitelist to be used in ``[testenv*]``
  sections, allowing to avoid warnings for commands such as ``make``,
  used from the commands value.

- fix issue97 - allow substitutions to reference from other sections
  (thanks Krisztian Fekete)

- fix issue92 - fix {envsitepackagesdir} to actually work again

- show (test) command that is being executed, thanks 
  Lukasz Balcerzak

- re-license tox to MIT license

- depend on virtualenv-1.9.1 

- use either --distribute or --setuptools depending 
  on "distribute" env config

1.4.3
-----------------

- use pip-script.py instead of pip.exe on win32 to avoid the lock exe
  file on execution issue (thanks Philip Thiem)

- introduce -l|--listenv option to list configured environments
  (thanks  Lukasz Balcerzak)

- fix downloadcache determination to work according to docs: Only
  make pip use a download cache if PIP_DOWNLOAD_CACHE or a 
  downloadcache=PATH testenv setting is present. (The ENV setting
  takes precedence)

- fix issue84 - pypy on windows creates a bin not a scripts venv directory
  (thanks Lukasz Balcerzak)

- experimentally introduce --installpkg=PATH option to install a package
  rather than create/install an sdist package.  This will still require
  and use tox.ini and tests from the current working dir (and not from the
  remote package).

- substitute {envsitepackagesdir} with the package installation
  directory (closes #72) (thanks g2p)

- issue #70 remove PYTHONDONTWRITEBYTECODE workaround now that
  virtualenv behaves properly (thanks g2p)

- merged tox-quickstart command, contributed by Marc Abramowitz, which
  generates a default tox.ini after asking a few questions

- fix #48 - win32 detection of pypy and other interpreters that are on PATH
  (thanks Gustavo Picon)
